{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 23,
  "lineage": "f001923f-4b0d-cc96-9e16-8647e2737611",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "quickstart_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0589bab2a056b5677",
            "arn": "arn:aws:ec2:ap-southeast-3:471112524713:instance/i-08b8064f38e3e9e95",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b8064f38e3e9e95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "quickstart-rancher-20250510152314280300000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076f9a098ac7821e4",
            "private_dns": "ip-10-0-0-20.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.20",
            "public_dns": "ec2-16-78-90-207.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "16.78.90.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b442d506146387ba",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015290f6befcb9fa4",
            "tags": {
              "Creator": "rancher-quickstart",
              "Name": "quickstart-quickstart-node"
            },
            "tags_all": {
              "Creator": "rancher-quickstart",
              "Name": "quickstart-quickstart-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2ac5555e2a0ffe7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_instance.rancher_server",
            "aws_internet_gateway.rancher_gateway",
            "aws_key_pair.quickstart_key_pair",
            "aws_route_table.rancher_route_table",
            "aws_route_table_association.rancher_route_table_association",
            "aws_security_group.rancher_sg_allowall",
            "aws_subnet.rancher_subnet",
            "aws_vpc.rancher_vpc",
            "data.aws_ami.sles",
            "module.rancher_common.helm_release.cert_manager",
            "module.rancher_common.helm_release.rancher_server",
            "module.rancher_common.local_file.kube_config_server_yaml",
            "module.rancher_common.rancher2_bootstrap.admin",
            "module.rancher_common.rancher2_cluster_v2.quickstart_workload",
            "module.rancher_common.ssh_resource.install_k3s",
            "module.rancher_common.ssh_resource.retrieve_config",
            "tls_private_key.global_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0589bab2a056b5677",
            "arn": "arn:aws:ec2:ap-southeast-3:471112524713:instance/i-020bcd67c1241b70d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020bcd67c1241b70d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "quickstart-rancher-20250510152314280300000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e09943ec33f59f6",
            "private_dns": "ip-10-0-0-234.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.234",
            "public_dns": "ec2-16-78-6-168.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "16.78.6.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f36b4a950bda3d2",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015290f6befcb9fa4",
            "tags": {
              "Creator": "rancher-quickstart",
              "Name": "quickstart-rancher-server"
            },
            "tags_all": {
              "Creator": "rancher-quickstart",
              "Name": "quickstart-rancher-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2ac5555e2a0ffe7"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.rancher_gateway",
            "aws_key_pair.quickstart_key_pair",
            "aws_route_table.rancher_route_table",
            "aws_route_table_association.rancher_route_table_association",
            "aws_security_group.rancher_sg_allowall",
            "aws_subnet.rancher_subnet",
            "aws_vpc.rancher_vpc",
            "data.aws_ami.sles",
            "tls_private_key.global_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rancher_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:471112524713:internet-gateway/igw-07e0f8cacb31719b9",
            "id": "igw-07e0f8cacb31719b9",
            "owner_id": "471112524713",
            "tags": {
              "Name": "quickstart-rancher-gateway"
            },
            "tags_all": {
              "Name": "quickstart-rancher-gateway"
            },
            "vpc_id": "vpc-0485e5c2b2f7a9dac"
          },
          "dependencies": [
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rancher_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:471112524713:route-table/rtb-0f60ffb62b25cd275",
            "id": "rtb-0f60ffb62b25cd275",
            "owner_id": "471112524713",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e0f8cacb31719b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "quickstart-rancher-route-table"
            },
            "tags_all": {
              "Name": "quickstart-rancher-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0485e5c2b2f7a9dac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rancher_gateway",
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rancher_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327344cc3acdacdf",
            "route_table_id": "rtb-0f60ffb62b25cd275",
            "subnet_id": "subnet-015290f6befcb9fa4"
          },
          "dependencies": [
            "aws_internet_gateway.rancher_gateway",
            "aws_route_table.rancher_route_table",
            "aws_subnet.rancher_subnet",
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rancher_sg_allowall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:471112524713:security-group/sg-0e2ac5555e2a0ffe7",
            "description": "Rancher quickstart - allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2ac5555e2a0ffe7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "quickstart-rancher-allowall",
            "name_prefix": "",
            "owner_id": "471112524713",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "rancher-quickstart"
            },
            "tags_all": {
              "Creator": "rancher-quickstart"
            },
            "timeouts": null,
            "vpc_id": "vpc-0485e5c2b2f7a9dac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rancher_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:471112524713:subnet/subnet-015290f6befcb9fa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015290f6befcb9fa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112524713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "quickstart-rancher-subnet"
            },
            "tags_all": {
              "Name": "quickstart-rancher-subnet"
            },
            "vpc_id": "vpc-0485e5c2b2f7a9dac"
          },
          "dependencies": [
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rancher_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:471112524713:vpc/vpc-0485e5c2b2f7a9dac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084d9131aafdf14a4",
            "default_route_table_id": "rtb-002888d1ee15fbb51",
            "default_security_group_id": "sg-0e006e3e03d8864f7",
            "dhcp_options_id": "dopt-0107ec903ce6f6830",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0485e5c2b2f7a9dac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002888d1ee15fbb51",
            "owner_id": "471112524713",
            "tags": {
              "Name": "quickstart-rancher-vpc"
            },
            "tags_all": {
              "Name": "quickstart-rancher-vpc"
            }
          }
        }
      ]
    }
  ]
}